version 0.1.1

- doxygen documentation

version 0.1.0