@@ -1,3 +1,4 @@
+- create_assembly issue #5577
 version 0.1.1
 
 - doxygen documentation
